--- a/game/character_selector.html
+++ b/game/character_selector.html
@@ -1,98 +1,13 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Character Selector</title>
-  <link rel="stylesheet" href="character_selector.css"/>
-</head>
-<body>
-  <h1>Character Selector</h1>
-
-  <div id="character-container" class="character-grid"></div>
-  <script src="../assets/js/characters.js"></script>
-
-  <script>
-    const buttonSound = new Audio("../assets/sound/button_sound.mp3");
-    const container = document.getElementById("character-container");
-
-    // Carry through any existing query params from the current page
-    const baseParams = new URLSearchParams(location.search);
-
-    // Manually list which traits are mutable and should ride along in the URL
-    const MUTABLE_KEYS = ["hp", "ap", "gold"]; // add/remove keys as needed
-
-    data.characters.forEach((character, index) => {
-      const card = document.createElement("div");
-      card.classList.add("character-card");
-
-      card.innerHTML = `
-        <img src="${character.image}" alt="${character.name}" class="character-img">
-        <div class="character-info">
-          <h2>${character.name}</h2>
-          <p><strong>HP:</strong> ${character.hp}</p>
-          <p><strong>Difficulty:</strong> ${character.difficulty}</p>
-          <p class="flavor">${character.flavor}</p>
-          <h3>Abilities</h3>
-          <ul>
-            ${character.abilities.map(a => `
-              <li><strong>${a.name}:</strong> ${a.description}</li>
-            `).join("")}
-          </ul>
-          <img src="../assets/sprites/select_button.png" class="select-btn" alt="Select Button">
-        </div>
-      `;
-
-      const selectBtn = card.querySelector(".select-btn");
-
-      // Pressed effect
-      selectBtn.addEventListener("mousedown", () => {
-        selectBtn.src = "../assets/sprites/select_button_pressed.png";
-        buttonSound.play();
-      });
-
-      // Release → go to overworld with ?character_type=<index>&xp=0&hp=<val>&ap=<val>...
-      const go = () => {
-        selectBtn.src = "../assets/sprites/select_button.png";
-
-        // Clone current params, then set selection + mutable stats
-        const qs = new URLSearchParams(baseParams);
-        qs.set("character_type", index);
-
-        // NEW: ensure xp is present and starts at 0
-        qs.set("xp", "0");
-
-        // Add only the mutable keys that exist on this character
-        for (const key of MUTABLE_KEYS) {
-          const val = character[key];
-          if (val !== undefined && val !== null) {
-            qs.set(key, String(val));
-          }
-        }
-
-        window.location.href = `overworld.html?${qs.toString()}`;
-      };
-
-      selectBtn.addEventListener("mouseup", go);
-      selectBtn.addEventListener("touchend", (e) => { e.preventDefault(); go(); }, { passive: false });
-
-      container.appendChild(card);
-    });
-  </script>
-
-  <script src="../assets/js/cursor.js"></script>
-</body>
-</html>
- -->
-
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Character Selector</title>
-  <link rel="stylesheet" href="character_selector.css"/>
+  <link rel="stylesheet" href="character_selector.css" />
 </head>
+
 <body>
   <h1>Character Selector</h1>
 
@@ -102,12 +17,6 @@
   <script>
     const buttonSound = new Audio("../assets/sound/button_sound.mp3");
     const container = document.getElementById("character-container");
-
-    // Carry through existing query params
-    const baseParams = new URLSearchParams(location.search);
-
-    // Mutable keys to carry to battle/overworld
-    const MUTABLE_KEYS = ["currentHp", "maxHp", "gold"];
 
     data.characters.forEach((character, index) => {
       const card = document.createElement("div");
@@ -141,24 +50,17 @@
       // Release → go to overworld with character data
       const go = () => {
         selectBtn.src = "../assets/sprites/select_button.png";
-
-        const qs = new URLSearchParams(baseParams);
-        qs.set("character_type", index);
-
-        // Pass mutable stats (currentHp, maxHp, gold)
-        for (const key of MUTABLE_KEYS) {
-          qs.set(key, character[key]);
-        }
-
-        // Optional: pass character name and abilities if needed
-        qs.set("character_name", character.name);
-        qs.set("character_abilities", encodeURIComponent(JSON.stringify(character.abilities)));
-
-        window.location.href = `overworld.html?${qs.toString()}`;
+        // Pass character name via query string
+        const charData = encodeURIComponent(JSON.stringify(character));
+        window.location.href = `overworld.html?character=${charData}`;
       };
 
+      // Attach the click events
       selectBtn.addEventListener("mouseup", go);
-      selectBtn.addEventListener("touchend", (e) => { e.preventDefault(); go(); }, { passive: false });
+      selectBtn.addEventListener("touchend", (e) => {
+        e.preventDefault();
+        go();
+      }, { passive: false });
 
       container.appendChild(card);
     });
@@ -166,4 +68,5 @@
 
   <script src="../assets/js/cursor.js"></script>
 </body>
+
 </html>
